--- a/main/templates/main/list.html
+++ b/main/templates/main/list.html
@@ -2,5 +2,42 @@
 
 {% load static %}
 {% block content %}
-list
+    <table class="table table-hover">
+        <thead>
+        <tr>
+            <th>번호</th>
+            <th>제목</th>
+            <th>작성자</th>
+            <th>날짜</th>
+            <th>조회수</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>1</td>
+            <td>How to serve static files in django</td>
+            <td>toypanda</td>
+            <td>2020-02-17</td>
+            <td>3</td>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>How to align div in div</td>
+            <td>toypanda</td>
+            <td>2020-02-17</td>
+            <td>3</td>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>What is Restful API?</td>
+            <td>toypanda</td>
+            <td>2020-02-17</td>
+            <td>3</td>
+        </tr>
+        </tbody>
+    </table>
+    <div>
+    pagination
+    </div>
+
 {% endblock %}
