--- a/main/templates/main/list.html
+++ b/main/templates/main/list.html
@@ -2,42 +2,29 @@
 
 {% load static %}
 {% block content %}
+<div class="container">
     <table class="table table-hover">
         <thead>
-        <tr>
-            <th>번호</th>
-            <th>제목</th>
-            <th>작성자</th>
-            <th>날짜</th>
-            <th>조회수</th>
-        </tr>
+            <tr>
+                <th width=70px>번호</th>
+                <th width=300px>제목</th>
+                <th width=500px>내용</th>
+                <th width=150px>날짜</th>
+                <th width=150px>작성자</th>
+            </tr>
         </thead>
         <tbody>
-        <tr>
-            <td>1</td>
-            <td>How to serve static files in django</td>
-            <td>toypanda</td>
-            <td>2020-02-17</td>
-            <td>3</td>
-        </tr>
-        <tr>
-            <td>1</td>
-            <td>How to align div in div</td>
-            <td>toypanda</td>
-            <td>2020-02-17</td>
-            <td>3</td>
-        </tr>
-        <tr>
-            <td>1</td>
-            <td>What is Restful API?</td>
-            <td>toypanda</td>
-            <td>2020-02-17</td>
-            <td>3</td>
-        </tr>
+        {% for post in postAll %}
+            <tr>
+                <td height=100px>{{post.id}}</td>
+                <td>{{post.title}}</td>
+                <td>{{post.contents}}</td>
+                <td>{{post.created}}</td>
+                <td>{{post.writer}}</td>
+            </tr>
+        {% endfor %}
         </tbody>
     </table>
-    <div>
-    pagination
-    </div>
+</div>
 
 {% endblock %}
