--- a/main/templates/main/login.html
+++ b/main/templates/main/login.html
@@ -3,6 +3,10 @@
 {% load static %}
 {% block content %}
 
+{% comment %} TODO: 만약 로그인 해 있다면 사용자 정보, 시간, 오늘의 명언, todo를 보여주고(모멘텀?) 우측 상단에 환영합니다 ***님,
+              로그아웃 상태라면 로그인 창이 뜨도록 {% endcomment %}
+{% comment %} TODO: 게시판 리스트에서 상세 화면으로 접근하거나 글을 쓰려면 로그인이 필요하도록 {% endcomment %}
+
 
 <div class="container">
     <form>
