--- a/main/templates/main/login.html
+++ b/main/templates/main/login.html
@@ -10,7 +10,7 @@
 
 <div class="container">
     <form>
-    <h4>Login</h4>
+    <h4>Log In</h4>
     <div class="form-group w-25">
         <label for="exampleInputEmail1">Email</label>
         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
@@ -24,7 +24,7 @@
         <input type="checkbox" class="form-check-input" id="exampleCheck1">
         <label class="form-check-label" for="exampleCheck1">Check me out</label>
     </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn btn-secondary">Submit</button>
     </form>
 </div>
 {% endblock %}
