--- a/main/templates/main/login.html
+++ b/main/templates/main/login.html
@@ -8,23 +8,30 @@
 {% comment %} TODO: 게시판 리스트에서 상세 화면으로 접근하거나 글을 쓰려면 로그인이 필요하도록 {% endcomment %}
 
 
-<div class="container">
-    <form>
-    <h4>Log In</h4>
-    <div class="form-group w-25">
-        <label for="exampleInputEmail1">Email</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+<div class="container mt-4">
+    <div class="row">
+        <div class="col">
+        <form>
+        <h4 class="mb-4">로그인</h4>
+        <div class="form-group w-25">
+            <label for="exampleInputEmail1">Email</label>
+            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+        </div>
+        <div class="form-group w-25">
+            <label for="exampleInputPassword1">Password</label>
+            <input type="password" class="form-control" id="exampleInputPassword1">
+        </div>
+        <div class="form-group form-check">
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <label class="form-check-label" for="exampleCheck1">Check me out</label>
+        </div>
+        <button type="submit" class="btn btn-secondary">Submit</button>
+        </form>
+        </div>
+        <div>
+        <button type="button" class="btn btn-secondary" onClick = " location.href='{% url 'join' %}' ">회원가입</button>
+        </div>
     </div>
-    <div class="form-group w-25">
-        <label for="exampleInputPassword1">Password</label>
-        <input type="password" class="form-control" id="exampleInputPassword1">
-    </div>
-    <div class="form-group form-check">
-        <input type="checkbox" class="form-check-input" id="exampleCheck1">
-        <label class="form-check-label" for="exampleCheck1">Check me out</label>
-    </div>
-    <button type="submit" class="btn btn-secondary">Submit</button>
-    </form>
 </div>
 {% endblock %}
