--- a/main/templates/main/login.html
+++ b/main/templates/main/login.html
@@ -14,18 +14,17 @@
         <form>
         <h4 class="mb-4">로그인</h4>
         <div class="form-group w-25">
-            <label for="exampleInputEmail1">Email</label>
+            <label for="exampleInputEmail1">Id</label>
             <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
         </div>
         <div class="form-group w-25">
             <label for="exampleInputPassword1">Password</label>
             <input type="password" class="form-control" id="exampleInputPassword1">
         </div>
-        <div class="form-group form-check">
+        {% comment %} <div class="form-group form-check">
             <input type="checkbox" class="form-check-input" id="exampleCheck1">
             <label class="form-check-label" for="exampleCheck1">Check me out</label>
-        </div>
+        </div> {% endcomment %}
         <button type="submit" class="btn btn-secondary">Submit</button>
         </form>
         </div>
