--- a/main/templates/main/login.html
+++ b/main/templates/main/login.html
@@ -9,28 +9,11 @@
 
 
 <div class="container mt-4">
-    <div class="row">
-        <div class="col">
-        <form>
-        <h4 class="mb-4">로그인</h4>
-        <div class="form-group w-25">
-            <label for="exampleInputEmail1">Id</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-        </div>
-        <div class="form-group w-25">
-            <label for="exampleInputPassword1">Password</label>
-            <input type="password" class="form-control" id="exampleInputPassword1">
-        </div>
-        {% comment %} <div class="form-group form-check">
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <label class="form-check-label" for="exampleCheck1">Check me out</label>
-        </div> {% endcomment %}
-        <button type="submit" class="btn btn-secondary">Submit</button>
-        </form>
-        </div>
-        <div>
-        <button type="button" class="btn btn-secondary" onClick = " location.href='{% url 'join' %}' ">회원가입</button>
-        </div>
-    </div>
+    <h2>로그인</h2>
+    <form method="post" action="">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <input type="submit" value="로그인" />
+</form>
 </div>
 {% endblock %}
