--- a/main/templates/main/login.html
+++ b/main/templates/main/login.html
@@ -10,7 +10,7 @@
 
 <div class="container mt-4">
     <h2>로그인</h2>
-    <form method="post" action="">
+    <form method="POST" action="">
     {% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="로그인" />
