--- a/main/templates/main/join.html
+++ b/main/templates/main/join.html
@@ -5,10 +5,29 @@
 
 <div class="container mt-4">
     <h4 class="mb-4">회원가입</h4>
-    <form method="post" action="">
+    
+    <form method="POST" action="{% url 'join' %}">
+        {% csrf_token %}
+        Username:
+        <br>
+        <input name="username" type="text">
+        <br>
+        Password:
+        <br>
+        <input name="password1" type="password">
+        <br>
+        Confirm Password:
+        <br>
+        <input name="password2" type="password">
+        <br><br>
+        <input type="submit" class="btn btn-primary" value="회원가입">
+    </form>
+
+
+    {% comment %} <form method="post" action="">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="btn btn-secondary" >등록</button>
-    </form>
+    </form> {% endcomment %}
 </div>
 {% endblock %}
