--- a/main/templates/main/login.html
+++ b/main/templates/main/login.html
@@ -9,11 +9,18 @@
 
 
 <div class="container mt-4">
-    <h2>로그인</h2>
-    <form method="POST" action="">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="로그인" />
-</form>
+    <h4 class="mb-4">로그인</h4>
+    
+    <form method="POST" action="{% url 'login' %}">
+        {% csrf_token %}
+        Username:
+        <br>
+        <input name="username" type="text">
+        <br>
+        Password:
+        <br>
+        <input name="password" type="password">
+        <br><br>
+        <input type="submit" class="btn btn-primary" value="로그인">
 </div>
 {% endblock %}
