--- a/main/templates/main/login.html
+++ b/main/templates/main/login.html
@@ -10,7 +10,16 @@
 
 <div class="container mt-4">
     <h4 class="mb-4">로그인</h4>
-    
+    {% if messages %}
+        {% csrf_token %}
+        <div class="messages">
+            {% for message in messages %}
+                <div {% if message.tags %} class="alert alert-{{ message.tags }}"{% endif %}>
+                    {{ message.message }}
+                </div>
+            {% endfor %}
+        </div>
+    {% endif %}
     <form method="POST" action="{% url 'login' %}">
         {% csrf_token %}
         Username:
