--- a/main/templates/main/join.html
+++ b/main/templates/main/join.html
@@ -19,17 +19,17 @@
         {% csrf_token %}
         Username:
         <br>
-        <input name="username" type="text">
+        <input id="username" name="username" type="text">
         <br>
         Password:
         <br>
-        <input name="password1" type="password">
+        <input id="password1" name="password1" type="password">
         <br>
         Confirm Password:
         <br>
-        <input name="password2" type="password">
+        <input id="password2" name="password2" type="password">
         <br><br>
-        <input type="submit" class="btn btn-primary" value="회원가입">
+        <input id="button_joinus" type="submit" class="btn btn-secondary" value="회원가입">
     </form>
 
 
