--- a/main/templates/main/login.html
+++ b/main/templates/main/login.html
@@ -30,6 +30,6 @@
         <br>
         <input name="password" type="password">
         <br><br>
-        <input type="submit" class="btn btn-primary" value="로그인">
+        <input type="submit" class="btn btn-secondary" value="로그인">
 </div>
 {% endblock %}
